--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         </div>
     </header>
 
+    <main>
+        <div class="banner">
+            <img src="./img/vr1.png" alt="front">
+        </div>
+    </main>
+
     <footer>
         <ul class="footer 1">
             <li><a href="#">Contact us</a></li>
