--- a/index.html
+++ b/index.html
@@ -23,7 +23,31 @@
         <div class="banner">
             <img src="./img/vr1.png" alt="front">
         </div>
-        
+        <div class="front">
+            <div class="explore">
+                <h1>Explore</h1>
+                <br>
+                <a href="explore.html"><img src="./img/astronaut.png"></a>
+            </div>
+            <br>
+            <div class="exhibition">
+                <h1>Exhibition spaces</h1>
+                <br>
+                <a href="exhibition.html"><img src="./img/mikroskop.png"></a>
+            </div>
+            <br>
+            <div class="visit">
+                <h1>visit</h1>
+                <br>
+                <a href="visit.html"><img src="./img/museum.png"></a>
+            </div>
+            <br>
+            <div class="get-involved">
+                <h1>Get involved</h1>
+                <br>
+                <a href="get-involved.html"><img src="./img/vitenskap.png"></a>
+            </div>
+        </div>
     </main>
 
     <footer>
