--- a/explore.html
+++ b/explore.html
@@ -18,6 +18,12 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="banner2">
+            <img src="./img/astronaut.png" alt="banner2">
+        </div>
+        <br>
+    </main>
 
     <footer>
         <ul class="footer 1">
