--- a/exhibition.html
+++ b/exhibition.html
@@ -19,6 +19,15 @@
         </div>
     </header>
 
+    <main>
+        <div class="banner3">
+            <img src="./img/mikroskop.png" alt="banner3">
+        </div>
+        <br>
+        
+        
+    </main>
+
     <footer>
         <ul class="footer 1">
             <li><a href="#">Contact us</a></li>
