--- a/visit.html
+++ b/visit.html
@@ -18,6 +18,63 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="banner4">
+            <img src="./img/museum.png" alt="visit">
+        </div>
+        <br>
+        <div class="front">
+            <div class="location">
+                <h1>Lockation</h1>
+                <br>
+                <p>The museum is located at Finnbergåsen 6, 5063 Bergen</p>
+            </div>
+            <br>
+            <div class="administration">
+                <H1>administration</H1>
+            </div>
+            <br>
+            <p> The entrance is free for all. 
+                There are guided tours of the museum that leave every hour. These tours are 70 NOK per person and include a handy printed guide of the museum. 
+                If you would like to organise a guided tour for your group of 6 or more people, please contact us to arrange the tour.</p>
+             <br>
+            <div class="hours">
+            <h1>Hours</h1>
+            <br>
+            <ul>
+                <li>Monday: Closed</li>
+                <li>Tuesday: 10:00 – 16:00</li>
+                <li>Wednesday: 10:00 – 16:00</li>
+                <li>Thursday: 10:00 – 16:00</li>
+                <li>Friday: 10:00 – 19:00</li>
+                <li>Saturday: 9:00 – 16:00</li>
+                <li>Sunday: 9:00 – 13:00</li>
+            </ul>
+            </div>  
+            <br>
+            <div class="accessebility">
+                <h1>Accessebility</h1>
+                <br>
+                <p>The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired.
+                </p>
+            </div> 
+            <br>
+            <div class="food">
+                <h1>Food and drinks</h1>
+                <br>
+                <p>There is a café attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more.
+                </p>
+            </div>
+            <br>
+            <div class="shop">
+                <h1>Shop</h1>
+                <br>
+                <p>Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you’ve left the museum.
+                </p>
+            </div>
+        </div>
+        
+    </main>
 
     <footer>
         <ul class="footer 1">
