--- a/visit.html
+++ b/visit.html
@@ -24,7 +24,7 @@
         </div>
         <br>
         <div class="front">
-                <h1>Lockation</h1>
+                <h1>Location</h1>
                 <br>
                 <p>The museum is located at Finnbergåsen 6, 5063 Bergen</p>
             <br>
