--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 <br>
                 <a href="exhibition.html"><img src="./img/mikroskop.png"></a>
             </div>
+        </div>
+        <div class="front2">
             <br>
             <div class="visit">
                 <h1>visit</h1>
