--- a/index.html
+++ b/index.html
@@ -36,11 +36,9 @@
                 <br>
                 <a href="exhibition.html"><img src="./img/mikroskop.png"></a>
             </div>
-        </div>
-        <div class="front2">
             <br>
             <div class="visit">
-                <h1>visit</h1>
+                <h1>Visit</h1>
                 <br>
                 <a href="visit.html"><img src="./img/museum.png"></a>
             </div>
