--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
     <main>
         <div class="banner">
-            <img src="./img/vr1.png" alt="front">
+            <img class="img1" src="./img/vr1.png" alt="front">
+            <img class="img2" src="./img/exhibition-1863344_1920.jpg" alt="img2">
         </div>
         <br>
         <div class="front">
