--- a/index.html
+++ b/index.html
@@ -21,31 +21,32 @@
 
     <main>
         <div class="banner">
-            <img class="img1" src="./img/vr1.png" alt="front">
+            <h1>Science community center</h1>
+            <!-- <img class="img1" src="./img/vr1.png" alt="front"> -->
             <img class="img2" src="./img/exhibition-1863344_1920.jpg" alt="img2">
         </div>
         <br>
         <div class="front">
             <div class="explore">
-                <h1>Explore</h1>
+                <h2>Explore</h2>
                 <br>
                 <a href="explore.html"><img src="./img/astronaut.png"></a>
             </div>
             <br>
             <div class="exhibition">
-                <h1>Exhibition spaces</h1>
+                <h2>Exhibition spaces</h2>
                 <br>
                 <a href="exhibition.html"><img src="./img/mikroskop.png"></a>
             </div>
             <br>
             <div class="visit">
-                <h1>Visit</h1>
+                <h2>Visit</h2>
                 <br>
                 <a href="visit.html"><img src="./img/museum.png"></a>
             </div>
             <br>
             <div class="get-involved">
-                <h1>Get involved</h1>
+                <h2>Get involved</h2>
                 <br>
                 <a href="get-involved.html"><img src="./img/vitenskap.png"></a>
             </div>
