--- a/explore.html
+++ b/explore.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <div class="banner2">
-            <img src="./img/astronaut.png" alt="banner2">
+            <img class="img3" src="./img/astronaut.png" alt="banner2">
         </div>
         <br>
         <div class="front">
