--- a/exhibition.html
+++ b/exhibition.html
@@ -21,7 +21,7 @@
 
     <main>
         <div class="banner3">
-            <img src="./img/mikroskop.png" alt="banner3">
+            <img class="img4" src="./img/mikroskop.png" alt="banner3">
         </div>
         <br>
         <div class="front">
@@ -56,6 +56,7 @@
                     Many of our great medicinal discoveries have come not only from the lab, but also from observing animals in the wild. Often our fellow creatures have beat us to it.
                 </p>
                 <br>
+            </div>
                 <div class="robotics">
                     <h1>Robotics and AI</h1>
                     <br>
@@ -75,7 +76,7 @@
                         In our ecology section of the museum, we unpack the dangers we currently face including global warming, extinction of species, and pollution. But we also focus on the positive ways we can all contribute to a brighter future.
                     </p>
                 </div>
-            </div>
+            
         </div>
     </main>
 
