--- a/visit.html
+++ b/visit.html
@@ -23,7 +23,7 @@
             <img src="./img/museum.png" alt="visit">
         </div>
         <br>
-        <div class="front">
+        <div class="front2">
                 <h1>Location</h1>
                 <br>
                 <p>The museum is located at Finnbergåsen 6, 5063 Bergen</p>
