--- a/visit.html
+++ b/visit.html
@@ -22,7 +22,6 @@
         <div class="banner4">
             <img src="./img/museum.png" alt="visit">
         </div>
-        <br>
         <div class="front2">
                 <h1>Location</h1>
                 <br>
@@ -46,6 +45,7 @@
                 <li>Saturday: 9:00 – 16:00</li>
                 <li>Sunday: 9:00 – 13:00</li>
             </ul> 
+            </div>
             <br>
                 <h1>Accessebility</h1>
                 <br>
