--- a/get-involved.html
+++ b/get-involved.html
@@ -23,7 +23,7 @@
             <img src="./img/vitenskap.png" alt="">
         </div>
         <br>
-        <div class="front">
+        <div class="front2">
             <div class="support">
                 <h1>Support</h1>
                 <br>
