--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
     <main>
         <div class="banner">
-            <h1>Science community center</h1>
-            <!-- <img class="img1" src="./img/vr1.png" alt="front"> -->
+            <img class="img1" src="./img/vr1.png" alt="front">
             <img class="img2" src="./img/exhibition-1863344_1920.jpg" alt="img2">
         </div>
         <br>
