--- a/explore.html
+++ b/explore.html
@@ -21,6 +21,7 @@
     <main>
         <div class="banner2">
             <img class="img3" src="./img/astronaut.png" alt="banner2">
+            <img class="imgpc" src="/img/learn-2405206_1920.jpg" alt="banner2">
         </div>
         <br>
         <div class="front">
